Implemented handling of initialResourcesVersions in DeltaRequest for ADS (#445)